style.css
body {
    color: white;
}

.coin-card {
    width: 600px;
    height: auto;
    background-color: #a9b0b8;
    border: 1px solid black;
    border-radius: 10px;
    padding: 10px;
    margin: 10px auto;
}

/* #card-container {

} */
#card-title {
    text-align: center;
    margin-bottom: 0%;
    margin-top: 0%;
}

#card-expanded {
    width: 400px;
    margin-left: 45px;
    border-top: 1px solid;
}

#dropdpwn-info {
    width: 250px;
}

#card-header {
    font-weight: bold;
}

#commentInput {
    padding-right: 10px;
}

h1 {
    text-align: center;
    margin-bottom: 0%;
}

#sidebar{
    width: 30%;
    padding-right: .5rem;
    margin-right: .5rem;
    float: left;
}

#rankedList{
    list-style-type: none;
}

#search {
    padding-left: 38px;
}

#market-totals{
    font-family: Arial;
    font-size: larger;
    text-align: center;
    padding-top: 10px;
    padding-left: 451.59px;
}
#search{
    text-align: center;
    padding-left: 451.59px;

}
.sideBar{
    border: 1px solid black;
    border-radius: 5px;
    width: auto;
    min-width: 452px;
    float: left;
    position: fixed;
    top: 0;
    bottom: 0;
    overflow-y: auto;
    margin-right: 10px;
}
tr {
    border-bottom: 1px solid black;
}
tr.positive td.flux{
    color: #33ff33;
}
tr.negative td.flux{
    color: red;
}
tr td.link a{
    color: white;
}

